k8s/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksonline-api
  namespace: books-online
  labels:
    app: booksonline-api
spec:
  replicas: 1 # Starts at 1, HPA will scale it up if needed
  selector:
    matchLabels:
      app: booksonline-api
  template:
    metadata:
      labels:
        app: booksonline-api
    spec:
      containers:
      - name: api
        image: ghcr.io/mmorall/booksonline/booksonline-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        
        # Connect to Postgres securely using the secret auto-generated by CNPG
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5

        # Required for the Autoscaler to work
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: booksonline-api-svc
  namespace: books-online
spec:
  selector:
    app: booksonline-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
