k8s/application/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksonline-frontend
  namespace: books-online
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booksonline-frontend
  template:
    metadata:
      labels:
        app: booksonline-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: kiosk-html

---
apiVersion: v1
kind: Service
metadata:
  name: booksonline-frontend-svc
  namespace: books-online
spec:
  selector:
    app: booksonline-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksonline-frontend-ingress
  namespace: books-online
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: booksonline.miguelmoral.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booksonline-frontend-svc
            port:
              number: 80
