k8s/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksonline-api-ingress
  namespace: books-online
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api-booksonline.miguelmoral.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booksonline-api-svc
            port:
              number: 80
